# oclc-api-bulk-updater

./: .gitignore  README.md  idm-update.py  mod.jq  no-ill.json  pyproject.toml
